<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_username_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/username"
            android:paddingEnd ="@dimen/padding_edit_text"
            android:paddingStart ="@dimen/padding_edit_text" />

        <EditText
            android:id="@+id/edit_text_password_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:paddingEnd="@dimen/padding_edit_text"
            android:paddingRight="@dimen/padding_edit_text"
            android:paddingLeft="@dimen/padding_edit_text"
            android:layout_marginBottom="@dimen/margin_bottom"/>

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_log_in" />

        <Button
            android:id="@+id/button_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_signup"/>
    </LinearLayout>

</FrameLayout>